# Snippets

./: .gitignore  LICENSE  requirements.txt
Boost/: OpenCL加速计算.cc  OpenCL加速计算最小模板.cc  文件名模糊数搜索.cc
CMake/: 常用CMakeLists语句.txt
CSS/: 自定义字体.css
Cartopy/: Demo-Homeland.py  单独绘制shape子区域.py  绘制时使用shape限定范围.ipynb
Cartopy/Shapefile/: China-borders.dbf  China-borders.shp  China-borders.shx  China-province-simple-utf8.dbf  China-province-simple-utf8.qmd  China-province.dbf  China-province.shp  China-province.shx  来源.txt
Fortran/: OpenMP加速内部函数.f90  openmpDO.f90  write-netcdf.f90
GDAL/: CMakeLists.txt  gdal-read-to-vector.cpp  modis拼接重投影-Python版.py  modis拼接重投影-命令行版.py  modis拼接重投影-命令行版.sh  使用shp文件裁剪或掩模TIF文件.py  将geojson文件转换为PostgreSQL的一张表.py  由网格经纬度Warp风三MWRI的轨道数据.py
GMT/: MODIS-NDVI动态变化.sh  MODIS-SIN网格.bat
HDF4/: read_dataset.cpp
HDF5/: CMakeLists.txt  c_read_hdf5.c  cpp_read_hdf5.cc  fortran_read_hdf5.f90  fortran_write_hdf5.f90  list_all_variables.cpp  python_read_hdf5.py  read_into_eigen3.cc
HTML/: 渲染LaTeX公式.html
LaTeX/: tableWidth.tex
MODIS-NDVI/: China-201703-201802-MOD13A3-FilesName.txt  China-Aug-2011-2020-MOD13A3-FilesName.txt  MakeMap.ps1  MakeMap.py  README.md
OpenCV/: CMakeLists.txt  drawGraph.cc  打开摄像头.cc
PDF/: PDF逆序.py
Python/: CMakeLists.txt  runPythonScript.c  runPythonString.c  testScript.py
QGIS-example-raster/彩色渲染TIF文件/: CMakeLists.txt  main.cpp
QGIS-example-shapefile/: CMakeLists.txt  main.cpp
QGIS/加载shp文件/: README.md  UsingPython.py  main.cpp
QGIS/彩色渲染TIF文件/: CMakeLists.txt  README.md  main.cpp
Qt/: AutoManualCheckUpdate.cpp  CMakeLists.txt  CameraMonitor.cpp  TreeWidgetDemo.py  commandLineParser.cpp  httpGet.cpp  miniProgressBar.cpp  randomInt.cpp  发起网络请求并有进度条.py  多进程的Ping.cpp  摄像头.cpp  最小单文件模板.cc  获取文件的sha256.cpp
Qt/PythonBinding/: exampleDialog.ui  testLoadUi.py
RS-Data/: ASCAT-L1B-数据预处理.ipynb  ASCAT-SM-数据预处理.ipynb  FY4B-生成经纬度查找表.py
Rasterio/: 重投影.py
buildSome/: build.netCDF-C.bat  build.netCDF-Fortran.bat
keras/: 卷积神经网络练习.py
libaria2/: Windows平台https支持-方案1.cpp  Windows平台https支持-方案2.cpp
netCDF/: base_read.cc  base_read.f90  base_read.py  read-netcdf.f90
pyresample/: MODIS瓦片重投影.py  只重采样不同投影.py  将一般条带重投影重采样裁剪到规则网格.py  将多个条带合并到一个网格.py  常用area的定义.py
setupSome/: setupUbuntu.sh
utils/: XYZ重采样到规则格网.ipynb  ffmpeg命令行转h265.sh  从高德地图获取行政区划并输出shp.py  从高德地图获取行政区划数据.py  使用Python通过FTP上传文件.py  判断条带是否经过某一区域.py  坐标转换.py  由众多条带确定点在条带上的最佳大圆距离阈值.ipynb  确定站点在条带上的阈值.py  绘制误差椭圆.py  计算两点间的大圆距离.py
绘制误差椭圆/: README.md  errorEllipes.py
