cmake_minimum_required(VERSION 3.15)

project(HelloGIS LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
if(UNIX)
    set(CMAKE_MODULE_PATH /usr/share/qgis/ ${CMAKE_MODULE_PATH})
elseif(WIN32)
    set(CMAKE_MODULE_PATH C:/OSGeo4W/apps/qgis-ltr ${CMAKE_MODULE_PATH})
endif()
find_package(QGIS)
find_package(GDAL)
find_package(Qt5Xml)
find_package(Qt5Widgets)
add_executable(HelloGIS main.cpp)
target_include_directories(HelloGIS PRIVATE ${GDAL_INCLUDE_DIR} ${QGIS_INCLUDE_DIR})
target_link_libraries(HelloGIS Qt5::Widgets Qt5::Xml ${GDAL_LIBRARY} ${QGIS_CORE_LIBRARY} ${QGIS_GUI_LIBRARY})
if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(HelloGIS PRIVATE -Wno-deprecated-declarations)
endif()
